--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
     <container class="container">
         <h1>PORTFOLIO</h1>
             <images class="row1">
-                <img src="images/portpics/_0000_akridge_bcard.jpg" alt="">
-                <img src="images/portpics/_0001_balloon_races.jpg" alt="">
-                <img src="images/portpics/_0002_seminar_flyer.jpg" alt="">
-                <img src="images/portpics/_0003_eyedr_billboard.jpg" alt="">
+                <img src="images/1.jpg" alt="">
+                <img src="images/2.jpg" alt="">
+                <img src="images/3.jpg" alt="">
+                <img src="images/4.jpg" alt="">
             </images>
             <images class="row2">
-                <img src="images/portpics/_0004_nerdcamp_logo.jpg" alt="">
-                <img src="images/portpics/_0005_rockout_festival.jpg" alt="">
-                <img src="images/portpics/_0006_history_of_flight.jpg" alt="">
-                <img src="images/portpics/_0007_welder_poster.jpg" alt="">
+                <img src="images/5.jpg" alt="">
+                <img src="images/6.jpg" alt="">
+                <img src="images/7.jpg" alt="">
+                <img src="images/8.jpg" alt="">
             </images>
         </container>
 </section>
